--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ window.addEventListener('beforeunload', function () {
         revealImage.classList.remove('hidden');
         crypticLine.classList.remove('hidden');
       } else {
-        glitchText.textContent = 'Wrong answer... the fire sleeps.';
+        glitchText.textContent = 'Wrong answer...';
         glitchText.classList.remove('hidden');
         glitchText.classList.remove('glitch');
         revealImage.classList.add('hidden');
